--- a/UniversityFacultativesSystem/UniversityFacultativesSystem/Properties/Resources.resx
+++ b/UniversityFacultativesSystem/UniversityFacultativesSystem/Properties/Resources.resx
@@ -121,7 +121,7 @@
   <data name="education_computer_school_graduate_cap_monitor_icon_149680" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\education_computer_school_graduate_cap_monitor_icon_149680.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="education_computer_school_graduate_cap_monitor_icon_1496801" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\education_computer_school_graduate_cap_monitor_icon_149680.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
